PR/47395: Steffen: mail(1) unnecessarily uses base64 if a CR without a LF is seen